--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dayjs": "^1.11.10",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.14.6",
